# power-bi-audit-agent

./: .gitignore  Cargo.toml
frontend/: index.html
src/: analyze.rs  gemini.rs  lib.rs  main.rs  mod.rs  types.rs
src/models/: errors.rs  mod.rs  types.rs
src/routes/: analyze.rs  generate.rs  mod.rs
src/services/: file_management.rs  gemini.rs  mod.rs  power_bi.rs
src/utils/: constants.rs  mod.rs
